--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "Categories (3, object): ['low' < 'medium' < 'high']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "(21631, 41)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "rate_cat                                                           high  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,6 +794,353 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We first discard columns of `num_x` and `num_y`, `id`, `name` and `primary`, `url`, `thumbnail` and `description` columns from the dataset, as they are purely identifiers or text information of the entries and not useful for classification.\n",
+    "\n",
+    "For the columns of lists that contain various attributes of the games, we have to transform them into singular values before we could use for classification. Some of them are unique with every game, such as `family`, `expansion` and `implementation`, so we discard them right away. For others like `artist`, `designer` and `publisher`, although there are common values across the games, from part 2 we have shown that there are too many of them and the distribution is very scattered across all games. We would need to have too many dummy variables to encode them, so we do not take them into consideration. For `category` and `mechanic`, the most common types consist a significant portion of the games, so we can use dummy variables to encode them. We keep the counts of all these category lists, which can represent the engagement of making the game, the complexity of the game and the number of derivation from the game.\n",
+    "\n",
+    "Also we have explored the relationship of variables that represent game rating, game popularity, player number and playing time in part 2. From the conclusions we have drawn, we decide to use `average` to represent the game rating, which is our target variable, and classify it into 3 categories in the `rate_cat` variable. For game ownership/popularity, given the high correlation between the variables, we choose `owned` to represent ownership, and `wishing` to represent the desire to own. Also given the high correlation of min and max playing time, we use `(max)playingtime` to denote it. Due to the huge outliers present in the games, we can impute the playing time of over 180 minutes to 180. For player numbers, the min and max values are not as strongly correlated, and we can consider them separately, and as they are more discrete values, we can categorize them to ease the process. For `minplayers`, we divide into '1', '2' and '3 and above', while for `maxplayers` we divide into '2 and below', '3-4', '5-7', '8 and above'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "core_data = ready_data.drop(columns=['num_x', 'num_y', 'id', 'name', 'primary', 'url', 'thumbnail', 'description'])\n",
+    "core_data.drop(columns=['family_list', 'expansion_list', 'implementation_list', 'artist_list', 'designer_list', 'publisher_list'], inplace=True)\n",
+    "core_data.drop(columns=['year', 'rank', 'average', 'bayes_average', 'users_rated', 'minplaytime', 'maxplaytime', 'trading', 'wanting'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "core_data['is_cardgame'] = core_data['category_list'].apply(lambda x: 'Card Game' in x)\n",
+    "core_data['is_dicerolling'] = core_data['mechanic_list'].apply(lambda x: 'Dice Rolling' in x)\n",
+    "core_data.drop(columns=['category_list', 'mechanic_list'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minplayers_cat(x):\n",
+    "    if x < 2:\n",
+    "        return '1'\n",
+    "    elif x == 2:\n",
+    "        return '2'\n",
+    "    else:\n",
+    "        return '3 and above'\n",
+    " \n",
+    "core_data['minplayers_cat'] = core_data['minplayers'].apply(minplayers_cat)\n",
+    "core_data.drop(columns=['minplayers'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxplayers_cat(x):\n",
+    "    if x <= 2:\n",
+    "        return '2 and below'\n",
+    "    elif x <= 4:\n",
+    "        return '3-4'\n",
+    "    elif x <= 7:\n",
+    "        return '5-7'\n",
+    "    else:\n",
+    "        return '8 and above'\n",
+    " \n",
+    "core_data['maxplayers_cat'] = core_data['maxplayers'].apply(maxplayers_cat)\n",
+    "core_data.drop(columns=['maxplayers'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "core_data['playingtime'] = core_data['playingtime'].apply(lambda x: x if x < 180 else 180)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>yearpublished</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>playingtime</th>\n",
+       "      <td>45</td>\n",
+       "      <td>45</td>\n",
+       "      <td>120</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>minage</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>owned</th>\n",
+       "      <td>168364</td>\n",
+       "      <td>161299</td>\n",
+       "      <td>167733</td>\n",
+       "      <td>120466</td>\n",
+       "      <td>106956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wishing</th>\n",
+       "      <td>9344</td>\n",
+       "      <td>7383</td>\n",
+       "      <td>5890</td>\n",
+       "      <td>12105</td>\n",
+       "      <td>8621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>category_count</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>family_count</th>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mechanic_count</th>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>expansion_count</th>\n",
+       "      <td>7</td>\n",
+       "      <td>155</td>\n",
+       "      <td>87</td>\n",
+       "      <td>16</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>implementation_count</th>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>designer_count</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>publisher_count</th>\n",
+       "      <td>33</td>\n",
+       "      <td>35</td>\n",
+       "      <td>48</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>artist_count</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rate_cat</th>\n",
+       "      <td>high</td>\n",
+       "      <td>high</td>\n",
+       "      <td>high</td>\n",
+       "      <td>high</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_cardgame</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_dicerolling</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>minplayers_cat</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3 and above</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>maxplayers_cat</th>\n",
+       "      <td>3-4</td>\n",
+       "      <td>5-7</td>\n",
+       "      <td>3-4</td>\n",
+       "      <td>5-7</td>\n",
+       "      <td>3-4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           0       1            2       3       4\n",
+       "yearpublished           2008    2000         1995    2010    2008\n",
+       "playingtime               45      45          120      30      30\n",
+       "minage                     8       7           10      10      13\n",
+       "owned                 168364  161299       167733  120466  106956\n",
+       "wishing                 9344    7383         5890   12105    8621\n",
+       "category_count             1       3            2       5       2\n",
+       "family_count               9      11            5       7       3\n",
+       "mechanic_count             7       3            9       5       5\n",
+       "expansion_count            7     155           87      16      46\n",
+       "implementation_count      11      17           29       3       2\n",
+       "designer_count             1       1            1       1       1\n",
+       "publisher_count           33      35           48      14      23\n",
+       "artist_count               5       4           11       4       9\n",
+       "rate_cat                high    high         high    high    high\n",
+       "is_cardgame            False   False        False    True    True\n",
+       "is_dicerolling         False   False         True   False   False\n",
+       "minplayers_cat             2       2  3 and above       2       2\n",
+       "maxplayers_cat           3-4     5-7          3-4     5-7     3-4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "core_data.head().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our preprocessed data, we can apply the train-test split and use scaling/encoding for the numerical/categorical variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "for train_index, test_index in sss.split(core_data, core_data['rate_cat']):\n",
+    "    train_set = core_data.iloc[core_data.index.intersection(train_index)]\n",
+    "    test_set = core_data.iloc[core_data.index.intersection(test_index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X = train_set.drop('rate_cat',axis=1)\n",
+    "train_y = train_set['rate_cat'].copy()\n",
+    "test_X = test_set.drop('rate_cat',axis=1)\n",
+    "test_y = test_set[['rate_cat']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "num_attribs = list(train_X.select_dtypes(include=[np.number]))\n",
+    "cat_attribs = list(train_X.select_dtypes(exclude=[np.number]))\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "        (\"num\", StandardScaler(), num_attribs),\n",
+    "        (\"cat\", OneHotEncoder(), cat_attribs),\n",
+    "    ])\n",
+    "\n",
+    "train_X_prepared = full_pipeline.fit_transform(train_X)\n",
+    "test_X_prepared = full_pipeline.transform(test_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Classification task"
    ]
   },
@@ -821,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
