--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -18,6 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Target"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our key question raised in the previous part is: **\"What factors affect the rating of board games?\"**\n",
+    "\n",
+    "We then transform this question into a classification task: **Predict which rating class a board game belongs to by its features**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import data"
    ]
   },
@@ -47,6 +63,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As suggested by GSI, we create a column to divide average ratings into three levels: low, medium, high, by using the 1/3 and 2/3 quantiles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -57,54 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0          high\n",
-       "1          high\n",
-       "2          high\n",
-       "3          high\n",
-       "4          high\n",
-       "          ...  \n",
-       "21626      high\n",
-       "21627    medium\n",
-       "21628       low\n",
-       "21629       low\n",
-       "21630      high\n",
-       "Name: rate_cat, Length: 21631, dtype: category\n",
-       "Categories (3, object): ['low' < 'medium' < 'high']"
+       "rate_cat\n",
+       "medium    7242\n",
+       "low       7223\n",
+       "high      7166\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ready_data.rate_cat"
+    "# checking the new columns\n",
+    "ready_data.rate_cat.value_counts()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(21631, 41)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "ready_data.shape"
+    "Overview of the data:"
    ]
   },
   {
@@ -700,64 +703,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "num_x                   0\n",
-       "id                      0\n",
-       "name                    0\n",
-       "year                    0\n",
-       "rank                    0\n",
-       "average                 0\n",
-       "bayes_average           0\n",
-       "users_rated             0\n",
-       "url                     0\n",
-       "thumbnail               0\n",
-       "num_y                   0\n",
-       "primary                 0\n",
-       "description             0\n",
-       "yearpublished           0\n",
-       "minplayers              0\n",
-       "maxplayers              0\n",
-       "playingtime             0\n",
-       "minplaytime             0\n",
-       "maxplaytime             0\n",
-       "minage                  0\n",
-       "owned                   0\n",
-       "trading                 0\n",
-       "wanting                 0\n",
-       "wishing                 0\n",
-       "category_list           0\n",
-       "mechanic_list           0\n",
-       "family_list             0\n",
-       "expansion_list          0\n",
-       "implementation_list     0\n",
-       "artist_list             0\n",
-       "designer_list           0\n",
-       "publisher_list          0\n",
-       "category_count          0\n",
-       "family_count            0\n",
-       "mechanic_count          0\n",
-       "expansion_count         0\n",
-       "implementation_count    0\n",
-       "designer_count          0\n",
-       "publisher_count         0\n",
-       "artist_count            0\n",
-       "rate_cat                0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "ready_data.isna().sum()"
+    "## Our tasks overview: Preprocessing and Classification."
    ]
   },
   {
@@ -765,22 +714,23 @@
    "metadata": {},
    "source": [
     "- Preprocessing\n",
-    "  - import data\n",
-    "  - Missing value: None\n",
-    "  - outliers: discard or impute\n",
-    "  - delete unnecessary columns (id, url, description)\n",
-    "  - combine similar columns (platers, playtime, own/wish/want/trade/rate)\n",
-    "  - list:\n",
+    "  - Import data: Done\n",
+    "  - Get new classification column: done\n",
+    "  - Missing value: After project 2, there is no NaN\n",
+    "  - Outliers: discard or impute?\n",
+    "  - Delete unnecessary columns (id, url, description)\n",
+    "  - Combine similar columns (platers, playtime, own/wish/want/trade/rate)\n",
+    "  - List: (two choices)\n",
     "    - use list_count\n",
     "    - choose top x categories and make dummy variables\n",
-    "  - pipeline: scaling, standardize, dummy variable\n",
+    "  - Pipeline: scaling, standardize, dummy variable\n",
     "  - PCA (optional)\n",
     "- Classification\n",
-    "  - train_test_split\n",
-    "  - LR, Tree, RF, XGBoost, SVM, try all\n",
-    "  - design model measurement: precision, accuracy score, F1, recall, AUC (be careful we have a 3-class category)\n",
-    "  - Cross Validation get optimal parameters (fine tuning the hyper-parameters)\n",
-    "  - interpretation"
+    "  - train_test_split, stratification\n",
+    "  - LR, LDA, QDA, KNN, Tree, RF, XGBoost, SVM, try them all\n",
+    "  - Design model measurement: precision, accuracy score, F1, recall, AUC (be careful, we have a 3-class category)\n",
+    "  - Cross Validation to get optimal parameters (fine tuning the hyper-parameters)\n",
+    "  - Interpretation"
    ]
   },
   {
@@ -788,6 +738,27 @@
    "metadata": {},
    "source": [
     "## Data Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Columns: keep, change, or discard?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first discard columns of `num_x` and `num_y`, `id`, `name` and `primary`, `url`, `thumbnail` and `description` columns from the dataset, as they are purely identifiers or text information of the entries and not useful or not quantifiable for classification analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the columns of lists that contain various attributes of the games, we have to transform them into singular values before we could use for classification. Some of them are unique with every game, such as `family`, `expansion` and `implementation`, so we discard them right away. For others like `artist`, `designer` and `publisher`, although there are common values across the games, from part 2 we have shown that there are too many of them and the distribution is very scattered across all games. We would need to have too many dummy variables to encode them, so we do not take them into consideration. For `category` and `mechanic`, the most common types consist a significant portion of the games, so we can use dummy variables to encode them. We keep the counts of all these category lists, which can represent the engagement of making the game, the complexity of the game and the number of derivation from the game."
    ]
   },
   {
@@ -836,7 +807,7 @@
     "        return '2'\n",
     "    else:\n",
     "        return '3 and above'\n",
-    " \n",
+    "\n",
     "core_data['minplayers_cat'] = core_data['minplayers'].apply(minplayers_cat)\n",
     "core_data.drop(columns=['minplayers'], inplace=True)"
    ]
@@ -856,7 +827,7 @@
     "        return '5-7'\n",
     "    else:\n",
     "        return '8 and above'\n",
-    " \n",
+    "\n",
     "core_data['maxplayers_cat'] = core_data['maxplayers'].apply(maxplayers_cat)\n",
     "core_data.drop(columns=['maxplayers'], inplace=True)"
    ]
