--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -758,7 +758,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the columns of lists that contain various attributes of the games, we have to transform them into singular values before we could use for classification. Some of them are unique with every game, such as `family`, `expansion` and `implementation`, so we discard them right away. For others like `artist`, `designer` and `publisher`, although there are common values across the games, from part 2 we have shown that there are too many of them and the distribution is very scattered across all games. We would need to have too many dummy variables to encode them, so we do not take them into consideration. For `category` and `mechanic`, the most common types consist a significant portion of the games, so we can use dummy variables to encode them. We keep the counts of all these category lists, which can represent the engagement of making the game, the complexity of the game and the number of derivation from the game."
+    "For the columns of lists that contain various attributes of the games, we want to transform them into singular values before we could use for classification. Some of them are unique with every game, such as `family`, `expansion` and `implementation`, so we discard them right away. For others like `artist`, `designer` and `publisher`, although there are common values across the games, from part 2 we have shown that there are too many of them and the distribution is very scattered across all games. We would need to have too many dummy variables to encode them, so we do not take them into consideration. For `category` and `mechanic`, the most common types consist a significant portion of the games, so we can use dummy variables to encode them. We keep the counts of all these category lists, which can represent the engagement of making the game, the complexity of the game and the number of derivation from the game."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, in part 2, we have explored the relationship of variables that represent game rating, game popularity, player number and playing time. From the conclusions we have drawn, we decide to use `average` to represent the game rating, which is our target variable, and classify it into 3 categories in the `rate_cat` variable. For game popularity, given the high correlation between the variables, we choose `owned` to represent ownership, and `wishing` to represent the desire to own. Also given the high correlation of min and max playing time, we use `(max)playingtime` to denote it. Due to the huge outliers present in the games, we can impute the playing time of over 180 minutes to 180. For player numbers, the min and max values are not as strongly correlated, and we can consider them separately, and as they are more discrete values, we can categorize them to ease the process. For `minplayers`, we divide into '1', '2' and '3 and above', while for `maxplayers` we divide into '2 and below', '3-4', '5-7', '8 and above'."
    ]
   },
   {
