--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1928,13 +1928,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# design function to report train and test accuracy, precision, F1, recall from the input model\n",
     "def report_model(model):\n",
-    "    model.fit(train_X, train_y)\n",
+    "    #model.fit(train_X, train_y)\n",
     "    model_pred = model.predict(test_X)\n",
     "    model_pred_train = model.predict(train_X)\n",
     "    model_train_accuracy = accuracy_score(train_y, model_pred_train)\n",
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2015,7 @@
        "Recall     0.860828  0.821490"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
        "Recall     0.815738  0.783362"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2497,6 +2497,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Confusion Matrix:\n",
+      "[[1221  105]\n",
+      " [ 151 1003]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix in test for random forest\n",
+    "rf_confusion = confusion_matrix(test_y, best_rf.predict(test_X))\n",
+    "print('Random Forest Confusion Matrix:')\n",
+    "print(rf_confusion)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2650,6 +2672,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Confusion Matrix:\n",
+      "[[1220  106]\n",
+      " [ 136 1018]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix of xgboost\n",
+    "xgb_confusion = confusion_matrix(test_y, best_xgb.predict(test_X))\n",
+    "print('XGBoost Confusion Matrix:')\n",
+    "print(xgb_confusion)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2770,6 +2814,13 @@
     "<a id='reference'>\n",
     "<strong>Reference</strong>\n",
     "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [1] https://boardgamegeek.com/wiki/page/ratings"
    ]
   }
  ],
