--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -3396,6 +3396,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A notable missclassification is **Chess**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>yearpublished</th>\n",
+       "      <th>maxplayers</th>\n",
+       "      <th>playingtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Chess</td>\n",
+       "      <td>1475</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name  yearpublished  maxplayers  playingtime\n",
+       "67  Chess           1475           2            0"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_data[ready_data.name == \"Chess\"][['name', 'yearpublished', 'maxplayers', 'playingtime']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This may suggest that there is room for improvement in our data preprocessing:\n",
+    "- Chess is an ancient game, but we converted 1475 into 1960\n",
+    "- Chess obviously has non-zero playing time, which should be imputed with more reasonable value.\n",
+    "- Chess, arguably, is not a board game in modern perspective, so we may simply ignore this case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <a id='toc2_7_'></a>[Interpretation, Conclusion, Reflection](#toc0_)"
    ]
   },
