--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Team members:\n",
+    "Team members: in Alphabetical Last Name order\n",
     "\n",
     "- Keqing Lu (keqinglu)\n",
     "- Xiyuan Wang (denniswx)\n",
